# libscap-bindings

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/actions/install-llvm/: action.yaml
.github/workflows/: ci-actions.yaml  ci-code.yaml  release.yaml
inc/: libscap.h
src/: consts.rs  enums.rs  lib.rs
