[package]
name = "libscap-bindings"
description = "Bindings for Falco's `libscap` eBPF monitoring backend C library"
version = "0.0.2"
license = "Apache-2.0"
homepage = "https://github.com/edera-dev/libscap-bindings"
repository = "https://github.com/edera-dev/libscap-bindings"
edition = "2024"
keywords = ["falco", "libscap", "eBPF", "bindings"]
categories = ["external-ffi-bindings", "os::linux-apis"]
exclude = [
        ".github",
        ".release-plz.toml",
        "**/*.orig"
]

[dependencies]
anyhow = "1.0.99"
strum = "0.27"
strum_macros = "0.27"

[build-dependencies]
anyhow = "1.0.99"
bindgen = { version = "0.72", default-features = false, features = [
  "logging",
  "prettyplease",
] }
cmake = "0.1"
flate2 = { version = "1.1.5", features = ["zlib-rs"], default-features = false }
reqwest = { version= "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
sha256 = "1.6.0"
tar = "0.4.44"

[dev-dependencies]
libc = "0.2.178"

[target.'cfg(target_env = "musl")'.build-dependencies]
bindgen = { version = "0.72", default-features = false, features = ["logging", "prettyplease", "static"] }

[features]
default = ["full_bindings"]
full_bindings = []
